conexao com firebase e tentativa de envio de dados

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "strictNullChecks": true,
+    "skipLibCheck": true,
+    "noImplicitAny": false,
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
