--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "@angular/cli": "18.2.11"
   },
   "dependencies": {
+    "@angular/core": "^18.2.10",
+    "@angular/common": "^18.2.10",
+    "@angular/platform-browser": "^18.2.10",
     "@angular/fire": "^18.0.1",
-    "@angular/platform-browser-dynamic": "^18.2.10",
-    "@capacitor/android": "^6.1.2",
-    "@capacitor/cli": "^6.1.2",
-    "@capacitor/core": "^6.1.2",
     "@ionic/angular": "^8.3.4",
     "chart.js": "^4.4.6"
   }
